--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
           <target>1.8</target>
         </configuration>
       </plugin>
-    </plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+            <fork>true</fork>
+        </configuration>
+    </plugin>
+  </plugins>
   </build>
 </project>
