--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,13 @@
   <artifactId>CucumberTraining</artifactId>
   <version>0.0.1-SNAPSHOT</version>
     <dependencies>
+      <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
+<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>3.0.0-M3</version>
+</dependency>
+
         <!-- https://mvnrepository.com/artifact/info.cukes/cucumber-java -->
 <dependency>
     <groupId>info.cukes</groupId>
